Kfold testing for PeakGrid Graph

--- a/graph_database/graph_1_4_Peaks_GridSlot_SameSample.ipynb
+++ b/graph_database/graph_1_4_Peaks_GridSlot_SameSample.ipynb
@@ -165,13 +165,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_116990/2901317241.py:2: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_3675/2901317241.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  peak_df['Widths'] = widths\n",
-      "/tmp/ipykernel_116990/2901317241.py:3: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_3675/2901317241.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -216,7 +216,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_116990/3240670544.py:5: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_3675/3240670544.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -396,7 +396,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_116990/412265839.py:1: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_3675/412265839.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -943,7 +943,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_116990/3060805488.py:1: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_3675/3060805488.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1050,7 +1050,26 @@
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_3675/945116818.py:8: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  sample_data['DIST'] = 1 - scaler.fit_transform(sample_data[['DIST']])\n",
+      "/tmp/ipykernel_3675/945116818.py:9: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  grid_data['DIST'] = 1 -scaler.fit_transform(grid_data[['DIST']])\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.preprocessing import MinMaxScaler\n",
     "\n",
@@ -1067,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1076,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1109,38 +1128,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>613</td>\n",
-       "      <td>727</td>\n",
+       "      <td>316</td>\n",
+       "      <td>432</td>\n",
        "      <td>SAMPLE</td>\n",
-       "      <td>0.998558</td>\n",
+       "      <td>0.998124</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>613</td>\n",
-       "      <td>1026</td>\n",
+       "      <td>316</td>\n",
+       "      <td>734</td>\n",
        "      <td>SAMPLE</td>\n",
-       "      <td>0.994449</td>\n",
+       "      <td>0.993009</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>613</td>\n",
-       "      <td>1165</td>\n",
+       "      <td>316</td>\n",
+       "      <td>880</td>\n",
        "      <td>SAMPLE</td>\n",
-       "      <td>0.992501</td>\n",
+       "      <td>0.990520</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>613</td>\n",
-       "      <td>1964</td>\n",
+       "      <td>316</td>\n",
+       "      <td>1524</td>\n",
        "      <td>SAMPLE</td>\n",
-       "      <td>0.981440</td>\n",
+       "      <td>0.979575</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>727</td>\n",
-       "      <td>613</td>\n",
+       "      <td>316</td>\n",
+       "      <td>1781</td>\n",
        "      <td>SAMPLE</td>\n",
-       "      <td>0.998558</td>\n",
+       "      <td>0.975214</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1148,14 +1167,14 @@
       ],
       "text/plain": [
        "   :START_ID  :END_ID LINK:TYPE  DIST:float\n",
-       "1        613      727    SAMPLE    0.998558\n",
-       "2        613     1026    SAMPLE    0.994449\n",
-       "3        613     1165    SAMPLE    0.992501\n",
-       "4        613     1964    SAMPLE    0.981440\n",
-       "5        727      613    SAMPLE    0.998558"
+       "1        316      432    SAMPLE    0.998124\n",
+       "2        316      734    SAMPLE    0.993009\n",
+       "3        316      880    SAMPLE    0.990520\n",
+       "4        316     1524    SAMPLE    0.979575\n",
+       "5        316     1781    SAMPLE    0.975214"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1166,23 +1185,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'scaled_df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[4], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mscaled_df\u001b[49m\u001b[38;5;241m.\u001b[39mto_csv(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mneo4j_directorys\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/import/relationships.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m, index\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'scaled_df' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "scaled_df.to_csv(f\"{neo4j_directorys}/import/relationships.csv\", index=False)"
+    "scaled_df.to_csv(f\"{neo4j_directory}/import/relationships.csv\", index=False)"
    ]
   },
   {
@@ -3309,10 +3316,10 @@
     "    scores = cross_val_score(clf, X, y, cv=cv, scoring=['accuracy', 'precision_macro', 'recall_macro', 'f1_macro'], n_jobs=-1)\n",
     "    \n",
     "    # Displaying the results\n",
-    "    print(f\"{et.__class__.__name__} Cross-Validation Accuracy: {np.mean(scores['test_accuracy']):.4f} +/- {np.std(scores['test_accuracy']):.4f}\")\n",
-    "    print(f\"{et.__class__.__name__} Cross-Validation Precision: {np.mean(scores['test_precision_macro']):.4f} +/- {np.std(scores['test_precision_macro']):.4f}\")\n",
-    "    print(f\"{et.__class__.__name__} Cross-Validation Recall: {np.mean(scores['test_recall_macro']):.4f} +/- {np.std(scores['test_recall_macro']):.4f}\")\n",
-    "    print(f\"{et.__class__.__name__} Cross-Validation F1-Score: {np.mean(scores['test_f1_macro']):.4f} +/- {np.std(scores['test_f1_macro']):.4f}\")"
+    "    print(f\"{clf.__class__.__name__} Cross-Validation Accuracy: {np.mean(scores['test_accuracy']):.4f} +/- {np.std(scores['test_accuracy']):.4f}\")\n",
+    "    print(f\"{clf.__class__.__name__} Cross-Validation Precision: {np.mean(scores['test_precision_macro']):.4f} +/- {np.std(scores['test_precision_macro']):.4f}\")\n",
+    "    print(f\"{clf.__class__.__name__} Cross-Validation Recall: {np.mean(scores['test_recall_macro']):.4f} +/- {np.std(scores['test_recall_macro']):.4f}\")\n",
+    "    print(f\"{clf.__class__.__name__} Cross-Validation F1-Score: {np.mean(scores['test_f1_macro']):.4f} +/- {np.std(scores['test_f1_macro']):.4f}\")"
    ]
   },
   {
@@ -3688,6 +3695,48 @@
    "source": [
     "fast_graph_df.drop(columns=['id'], inplace=True)\n",
     "fast_graph_df = fast_graph_df.groupby(['SpecID', 'Status']).max().reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.ensemble import RandomForestClassifier, ExtraTreesClassifier\n",
+    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
+    "\n",
+    "# Assuming graph_df is your DataFrame\n",
+    "\n",
+    "# Drop the SpecID column\n",
+    "X = fast_graph_df.drop(columns=['SpecID', 'Status'])\n",
+    "\n",
+    "# Target variable\n",
+    "y = fast_graph_df['Status']\n",
+    "\n",
+    "# Creating the classifiers\n",
+    "rf = RandomForestClassifier(random_state=1234)\n",
+    "et = ExtraTreesClassifier(random_state=1234)\n",
+    "svc = SVC(random_state=1234)\n",
+    "\n",
+    "# Combining the classifiers into a list\n",
+    "classifiers = [rf, et, svc]\n",
+    "\n",
+    "# Performing 10-fold cross-validation for each classifier\n",
+    "for clf in classifiers:\n",
+    "    \n",
+    "    # Using StratifiedKFold for classification tasks\n",
+    "    cv = KFold(n_splits=10, shuffle=True, random_state=1234)\n",
+    "    \n",
+    "    # Getting cross-validation scores\n",
+    "    scores = cross_val_score(clf, X, y, cv=cv, scoring=['accuracy', 'precision_macro', 'recall_macro', 'f1_macro'], n_jobs=-1)\n",
+    "    \n",
+    "    # Displaying the results\n",
+    "    print(f\"{clf.__class__.__name__} Cross-Validation Accuracy: {np.mean(scores['test_accuracy']):.4f} +/- {np.std(scores['test_accuracy']):.4f}\")\n",
+    "    print(f\"{clf.__class__.__name__} Cross-Validation Precision: {np.mean(scores['test_precision_macro']):.4f} +/- {np.std(scores['test_precision_macro']):.4f}\")\n",
+    "    print(f\"{clf.__class__.__name__} Cross-Validation Recall: {np.mean(scores['test_recall_macro']):.4f} +/- {np.std(scores['test_recall_macro']):.4f}\")\n",
+    "    print(f\"{clf.__class__.__name__} Cross-Validation F1-Score: {np.mean(scores['test_f1_macro']):.4f} +/- {np.std(scores['test_f1_macro']):.4f}\")"
    ]
   },
   {
