Model Evaluation Format

--- a/GroupKFold_feature_engineering/quick_evaluation.ipynb
+++ b/GroupKFold_feature_engineering/quick_evaluation.ipynb
@@ -1084,7 +1084,7 @@
     "    # Using GroupKFold for classification tasks\n",
     "    cv = GroupKFold(n_splits=10)\n",
     "\n",
-    "    # Specifying multiple scoring metrics including ROC-AUC\n",
+    "    # Cross Validate\n",
     "    scores = cross_validate(model, X, y, groups=groups, cv=cv, scoring=['accuracy', 'precision_macro', 'recall_macro', 'f1_macro'], n_jobs=-1)\n",
     "\n",
     "    # Displaying the results\n",
@@ -1098,7 +1098,26 @@
    "cell_type": "code",
    "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/eddie/.local/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1509: UndefinedMetricWarning: Recall is ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RandomForestClassifier Cross-Validation Accuracy: 0.5934 +/- 0.1085\n",
+      "RandomForestClassifier Cross-Validation Precision: 0.5971 +/- 0.1154\n",
+      "RandomForestClassifier Cross-Validation Recall: 0.6086 +/- 0.1485\n",
+      "RandomForestClassifier Cross-Validation F1-Score: 0.5674 +/- 0.1325\n"
+     ]
+    }
+   ],
    "source": [
     "rf = RandomForestClassifier(random_state=1234, criterion='entropy', max_depth=23, n_estimators=78)\n",
     "wavelength_df = prepare_wavelength_df(df, 'Absorbance')\n",
