--- a/feature_engineering/quick_spectra_cleaning.ipynb
+++ b/feature_engineering/quick_spectra_cleaning.ipynb
@@ -822,8 +822,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df = df.drop(columns=['Absorbance', 'Baseline', 'Baseline_Corrected_Absorbance'])\n",
-    "df = df.drop(columns=['Absorbance'])\n",
+    "df = df.drop(columns=['Absorbance', 'Baseline', 'Baseline_Corrected_Absorbance'])\n",
+    "#df = df.drop(columns=['Absorbance'])\n",
     "\n",
     "df = df.rename(columns={'Smooth_Baseline_Corrected':'Absorbance'})"
    ]
