--- a/Results/kfold_evaluation.ipynb
+++ b/Results/kfold_evaluation.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.svm import SVC\n",
     "from sklearn.model_selection import cross_val_score\n",
-    "from sklearn.model_selection import StratifiedKFold, KFold\n",
+    "from sklearn.model_selection import StratifiedKFold, KFold, cross_validate\n",
     "import seaborn as sns\n",
     "from Spectra_Preparation_Functions import *\n",
     "import matplotlib.pyplot as plt"
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
        "      <td>400.22778</td>\n",
        "      <td>201210-1</td>\n",
        "      <td>Normal</td>\n",
-       "      <td>0.024722</td>\n",
+       "      <td>31.645788</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -100,7 +100,7 @@
        "      <td>400.91116</td>\n",
        "      <td>201210-1</td>\n",
        "      <td>Normal</td>\n",
-       "      <td>0.024731</td>\n",
+       "      <td>31.890799</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -109,7 +109,7 @@
        "      <td>401.59454</td>\n",
        "      <td>201210-1</td>\n",
        "      <td>Normal</td>\n",
-       "      <td>0.024737</td>\n",
+       "      <td>32.060592</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -118,7 +118,7 @@
        "      <td>402.27789</td>\n",
        "      <td>201210-1</td>\n",
        "      <td>Normal</td>\n",
-       "      <td>0.024741</td>\n",
+       "      <td>32.161890</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -127,7 +127,7 @@
        "      <td>402.96127</td>\n",
        "      <td>201210-1</td>\n",
        "      <td>Normal</td>\n",
-       "      <td>0.024743</td>\n",
+       "      <td>32.201418</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -145,7 +145,7 @@
        "      <td>1797.03870</td>\n",
        "      <td>210526-3</td>\n",
        "      <td>Hyperglycemia</td>\n",
-       "      <td>0.016583</td>\n",
+       "      <td>-17.773341</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6239201</th>\n",
@@ -154,7 +154,7 @@
        "      <td>1797.72200</td>\n",
        "      <td>210526-3</td>\n",
        "      <td>Hyperglycemia</td>\n",
-       "      <td>0.016581</td>\n",
+       "      <td>-16.954783</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6239202</th>\n",
@@ -163,7 +163,7 @@
        "      <td>1798.40550</td>\n",
        "      <td>210526-3</td>\n",
        "      <td>Hyperglycemia</td>\n",
-       "      <td>0.016580</td>\n",
+       "      <td>-16.058237</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6239203</th>\n",
@@ -172,7 +172,7 @@
        "      <td>1799.08890</td>\n",
        "      <td>210526-3</td>\n",
        "      <td>Hyperglycemia</td>\n",
-       "      <td>0.016580</td>\n",
+       "      <td>-15.079158</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6239204</th>\n",
@@ -181,7 +181,7 @@
        "      <td>1799.77220</td>\n",
        "      <td>210526-3</td>\n",
        "      <td>Hyperglycemia</td>\n",
-       "      <td>0.016580</td>\n",
+       "      <td>-14.013007</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -190,22 +190,22 @@
       ],
       "text/plain": [
        "              SpecID   Seq  WaveNumber     SurID         Status  Absorbance\n",
-       "0        201210-1-00   293   400.22778  201210-1         Normal    0.024722\n",
-       "1        201210-1-00   294   400.91116  201210-1         Normal    0.024731\n",
-       "2        201210-1-00   295   401.59454  201210-1         Normal    0.024737\n",
-       "3        201210-1-00   296   402.27789  201210-1         Normal    0.024741\n",
-       "4        201210-1-00   297   402.96127  201210-1         Normal    0.024743\n",
+       "0        201210-1-00   293   400.22778  201210-1         Normal   31.645788\n",
+       "1        201210-1-00   294   400.91116  201210-1         Normal   31.890799\n",
+       "2        201210-1-00   295   401.59454  201210-1         Normal   32.060592\n",
+       "3        201210-1-00   296   402.27789  201210-1         Normal   32.161890\n",
+       "4        201210-1-00   297   402.96127  201210-1         Normal   32.201418\n",
        "...              ...   ...         ...       ...            ...         ...\n",
-       "6239200  210526-3-09  2337  1797.03870  210526-3  Hyperglycemia    0.016583\n",
-       "6239201  210526-3-09  2338  1797.72200  210526-3  Hyperglycemia    0.016581\n",
-       "6239202  210526-3-09  2339  1798.40550  210526-3  Hyperglycemia    0.016580\n",
-       "6239203  210526-3-09  2340  1799.08890  210526-3  Hyperglycemia    0.016580\n",
-       "6239204  210526-3-09  2341  1799.77220  210526-3  Hyperglycemia    0.016580\n",
+       "6239200  210526-3-09  2337  1797.03870  210526-3  Hyperglycemia  -17.773341\n",
+       "6239201  210526-3-09  2338  1797.72200  210526-3  Hyperglycemia  -16.954783\n",
+       "6239202  210526-3-09  2339  1798.40550  210526-3  Hyperglycemia  -16.058237\n",
+       "6239203  210526-3-09  2340  1799.08890  210526-3  Hyperglycemia  -15.079158\n",
+       "6239204  210526-3-09  2341  1799.77220  210526-3  Hyperglycemia  -14.013007\n",
        "\n",
        "[6239205 rows x 6 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,15 +215,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### **Machine Learning**"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,18 +282,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### **Full Spectra**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ExtraTreesClassifier Cross-Validation Accuracy: 0.9150 +/- 0.0167\n",
-      "ExtraTreesClassifier Cross-Validation Precision: 0.9147 +/- 0.0159\n",
-      "ExtraTreesClassifier Cross-Validation Recall: 0.9156 +/- 0.0158\n",
-      "ExtraTreesClassifier Cross-Validation F1-Score: 0.9142 +/- 0.0159\n"
+      "ExtraTreesClassifier Cross-Validation Accuracy: 0.9284 +/- 0.0159\n",
+      "ExtraTreesClassifier Cross-Validation Precision: 0.9287 +/- 0.0152\n",
+      "ExtraTreesClassifier Cross-Validation Recall: 0.9282 +/- 0.0162\n",
+      "ExtraTreesClassifier Cross-Validation F1-Score: 0.9279 +/- 0.0158\n"
      ]
     }
    ],
@@ -310,17 +310,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RandomForestClassifier Cross-Validation Accuracy: 0.8815 +/- 0.0195\n",
-      "RandomForestClassifier Cross-Validation Precision: 0.8813 +/- 0.0187\n",
-      "RandomForestClassifier Cross-Validation Recall: 0.8827 +/- 0.0199\n",
-      "RandomForestClassifier Cross-Validation F1-Score: 0.8805 +/- 0.0198\n"
+      "RandomForestClassifier Cross-Validation Accuracy: 0.9031 +/- 0.0156\n",
+      "RandomForestClassifier Cross-Validation Precision: 0.9028 +/- 0.0151\n",
+      "RandomForestClassifier Cross-Validation Recall: 0.9039 +/- 0.0160\n",
+      "RandomForestClassifier Cross-Validation F1-Score: 0.9022 +/- 0.0159\n"
      ]
     }
    ],
@@ -330,22 +330,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SVC Cross-Validation Accuracy: 0.7721 +/- 0.0154\n",
-      "SVC Cross-Validation Precision: 0.7729 +/- 0.0147\n",
-      "SVC Cross-Validation Recall: 0.7724 +/- 0.0151\n",
-      "SVC Cross-Validation F1-Score: 0.7711 +/- 0.0150\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "evaluate_model(wavelength_df, svc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### **Peak Bins**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### **Peak Stats**"
    ]
   }
  ],
