--- a/feature_engineering/quick_spectra_cleaning.ipynb
+++ b/feature_engineering/quick_spectra_cleaning.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
        "[6239205 rows x 6 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,7 @@
        "<Axes: xlabel='WaveNumber', ylabel='Absorbance'>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
        "<Axes: xlabel='WaveNumber', ylabel='Absorbance'>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
        "<Axes: xlabel='WaveNumber', ylabel='Absorbance'>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,7 @@
        "<Axes: xlabel='WaveNumber', ylabel='Despiked_Absorbance'>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
        "<Axes: xlabel='WaveNumber', ylabel='Baseline_Corrected_Absorbance'>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +530,7 @@
        "<Axes: xlabel='WaveNumber', ylabel='Smoothed_Absorbance'>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -553,18 +553,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# # Despike\n",
     "\n",
-    "df['Absorbance'] = df.groupby('SpecID')['Absorbance'].transform(lambda x: despike_group(x, ma=despike_ma, threshold=despike_threshold))"
+    "# df['Absorbance'] = df.groupby('SpecID')['Absorbance'].transform(lambda x: despike_group(x, ma=despike_ma, threshold=despike_threshold))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -807,7 +807,7 @@
        "[6239205 rows x 9 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -859,8 +859,6 @@
        "      <th>WaveNumber</th>\n",
        "      <th>SurID</th>\n",
        "      <th>Status</th>\n",
-       "      <th>Baseline</th>\n",
-       "      <th>Baseline_Corrected_Absorbance</th>\n",
        "      <th>Absorbance</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -872,8 +870,6 @@
        "      <td>400.22778</td>\n",
        "      <td>201210-1</td>\n",
        "      <td>Normal</td>\n",
-       "      <td>1732.452672</td>\n",
-       "      <td>33.210128</td>\n",
        "      <td>31.645788</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -883,8 +879,6 @@
        "      <td>400.91116</td>\n",
        "      <td>201210-1</td>\n",
        "      <td>Normal</td>\n",
-       "      <td>1732.301559</td>\n",
-       "      <td>42.479341</td>\n",
        "      <td>31.890799</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -894,8 +888,6 @@
        "      <td>401.59454</td>\n",
        "      <td>201210-1</td>\n",
        "      <td>Normal</td>\n",
-       "      <td>1732.150446</td>\n",
-       "      <td>36.879754</td>\n",
        "      <td>32.060592</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -905,8 +897,6 @@
        "      <td>402.27789</td>\n",
        "      <td>201210-1</td>\n",
        "      <td>Normal</td>\n",
-       "      <td>1731.999334</td>\n",
-       "      <td>24.422666</td>\n",
        "      <td>32.161890</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -916,14 +906,10 @@
        "      <td>402.96127</td>\n",
        "      <td>201210-1</td>\n",
        "      <td>Normal</td>\n",
-       "      <td>1731.848221</td>\n",
-       "      <td>27.020779</td>\n",
        "      <td>32.201418</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -938,8 +924,6 @@
        "      <td>1797.03870</td>\n",
        "      <td>210526-3</td>\n",
        "      <td>Hyperglycemia</td>\n",
-       "      <td>1647.373859</td>\n",
-       "      <td>-29.981259</td>\n",
        "      <td>-17.773341</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -949,8 +933,6 @@
        "      <td>1797.72200</td>\n",
        "      <td>210526-3</td>\n",
        "      <td>Hyperglycemia</td>\n",
-       "      <td>1646.546387</td>\n",
-       "      <td>-13.455287</td>\n",
        "      <td>-16.954783</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -960,8 +942,6 @@
        "      <td>1798.40550</td>\n",
        "      <td>210526-3</td>\n",
        "      <td>Hyperglycemia</td>\n",
-       "      <td>1645.718915</td>\n",
-       "      <td>-12.411315</td>\n",
        "      <td>-16.058237</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -971,8 +951,6 @@
        "      <td>1799.08890</td>\n",
        "      <td>210526-3</td>\n",
        "      <td>Hyperglycemia</td>\n",
-       "      <td>1644.891442</td>\n",
-       "      <td>-3.024942</td>\n",
        "      <td>-15.079158</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -982,46 +960,31 @@
        "      <td>1799.77220</td>\n",
        "      <td>210526-3</td>\n",
        "      <td>Hyperglycemia</td>\n",
-       "      <td>1644.063970</td>\n",
-       "      <td>-25.823470</td>\n",
        "      <td>-14.013007</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>6239205 rows × 8 columns</p>\n",
+       "<p>6239205 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "              SpecID   Seq  WaveNumber     SurID         Status     Baseline  \\\n",
-       "293      201210-1-00   293   400.22778  201210-1         Normal  1732.452672   \n",
-       "294      201210-1-00   294   400.91116  201210-1         Normal  1732.301559   \n",
-       "295      201210-1-00   295   401.59454  201210-1         Normal  1732.150446   \n",
-       "296      201210-1-00   296   402.27789  201210-1         Normal  1731.999334   \n",
-       "297      201210-1-00   297   402.96127  201210-1         Normal  1731.848221   \n",
-       "...              ...   ...         ...       ...            ...          ...   \n",
-       "8023277  210526-3-09  2337  1797.03870  210526-3  Hyperglycemia  1647.373859   \n",
-       "8023278  210526-3-09  2338  1797.72200  210526-3  Hyperglycemia  1646.546387   \n",
-       "8023279  210526-3-09  2339  1798.40550  210526-3  Hyperglycemia  1645.718915   \n",
-       "8023280  210526-3-09  2340  1799.08890  210526-3  Hyperglycemia  1644.891442   \n",
-       "8023281  210526-3-09  2341  1799.77220  210526-3  Hyperglycemia  1644.063970   \n",
+       "              SpecID   Seq  WaveNumber     SurID         Status  Absorbance\n",
+       "293      201210-1-00   293   400.22778  201210-1         Normal   31.645788\n",
+       "294      201210-1-00   294   400.91116  201210-1         Normal   31.890799\n",
+       "295      201210-1-00   295   401.59454  201210-1         Normal   32.060592\n",
+       "296      201210-1-00   296   402.27789  201210-1         Normal   32.161890\n",
+       "297      201210-1-00   297   402.96127  201210-1         Normal   32.201418\n",
+       "...              ...   ...         ...       ...            ...         ...\n",
+       "8023277  210526-3-09  2337  1797.03870  210526-3  Hyperglycemia  -17.773341\n",
+       "8023278  210526-3-09  2338  1797.72200  210526-3  Hyperglycemia  -16.954783\n",
+       "8023279  210526-3-09  2339  1798.40550  210526-3  Hyperglycemia  -16.058237\n",
+       "8023280  210526-3-09  2340  1799.08890  210526-3  Hyperglycemia  -15.079158\n",
+       "8023281  210526-3-09  2341  1799.77220  210526-3  Hyperglycemia  -14.013007\n",
        "\n",
-       "         Baseline_Corrected_Absorbance  Absorbance  \n",
-       "293                          33.210128   31.645788  \n",
-       "294                          42.479341   31.890799  \n",
-       "295                          36.879754   32.060592  \n",
-       "296                          24.422666   32.161890  \n",
-       "297                          27.020779   32.201418  \n",
-       "...                                ...         ...  \n",
-       "8023277                     -29.981259  -17.773341  \n",
-       "8023278                     -13.455287  -16.954783  \n",
-       "8023279                     -12.411315  -16.058237  \n",
-       "8023280                      -3.024942  -15.079158  \n",
-       "8023281                     -25.823470  -14.013007  \n",
-       "\n",
-       "[6239205 rows x 8 columns]"
+       "[6239205 rows x 6 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1032,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
