--- a/Results/groupkfold_evaluation.ipynb
+++ b/Results/groupkfold_evaluation.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.svm import SVC\n",
     "from sklearn.model_selection import cross_val_score\n",
-    "from sklearn.model_selection import StratifiedKFold, KFold, cross_validate\n",
+    "from sklearn.model_selection import StratifiedKFold, KFold, cross_validate, GroupKFold\n",
     "import seaborn as sns\n",
     "from Spectra_Preparation_Functions import *\n",
     "import matplotlib.pyplot as plt\n",
@@ -44,16 +44,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"../../data/initial_parameters.csv\")\n"
+    "df = pd.read_csv(\"../../data/groupkfold_parameters.csv\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -218,21 +218,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def evaluate_model(df, model):\n",
     "\n",
     "    # Set the Surfaces as groups\n",
-    "    X = df.drop(['Status'], axis=1)\n",
+    "    groups = df['SurID']\n",
+    "    X = df.drop(['Status', 'SurID'], axis=1)\n",
     "    y = df['Status']\n",
     "    \n",
     "    # Using GroupKFold for classification tasks\n",
-    "    cv = KFold(n_splits=10, random_state=1234, shuffle=True)\n",
+    "    cv = GroupKFold(n_splits=10)\n",
     "\n",
     "    # Cross Validate\n",
-    "    scores = cross_validate(model, X, y, cv=cv, scoring=['accuracy', 'precision_macro', 'recall_macro', 'f1_macro'], n_jobs=-1)\n",
+    "    scores = cross_validate(model, X, y, groups=groups, cv=cv, scoring=['accuracy', 'precision_macro', 'recall_macro', 'f1_macro'], n_jobs=-1)\n",
     "\n",
     "    # Displaying the results\n",
     "    print(f\"{model.__class__.__name__} Cross-Validation Accuracy: {np.mean(scores['test_accuracy']):.4f} +/- {np.std(scores['test_accuracy']):.4f}\")\n",
@@ -243,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,8 +255,9 @@
     "    wavelength_df.columns.name = None\n",
     "\n",
     "    # Merge with the statuses based on SpecID\n",
-    "    statuses = df[['SpecID', status_col]].drop_duplicates()\n",
-    "    wavelength_df = pd.merge(wavelength_df, statuses, on='SpecID')\n",
+    "    # Include the SurID to perform GroupKFold CV\n",
+    "    statuses_and_surface = df[['SpecID', 'SurID', status_col]].drop_duplicates()\n",
+    "    wavelength_df = pd.merge(wavelength_df, statuses_and_surface, on='SpecID')\n",
     "\n",
     "    # Set SpecID as the index\n",
     "    wavelength_df = wavelength_df.set_index('SpecID')\n",
@@ -265,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -792,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -839,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1149,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1169,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1189,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
