--- a/Baseline_Approach/Peak_Feature_Engineering.ipynb
+++ b/Baseline_Approach/Peak_Feature_Engineering.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### This aims to classify the exosome staus based on a featureset derrived from the peaks."
+    "### **This notebook aims to classify the exosome status based on a featureset derrived from the peaks.**"
    ]
   },
   {
@@ -33,7 +33,6 @@
     "from sklearn.model_selection import train_test_split\n",
     "from scipy.signal import peak_widths\n",
     "from scipy.signal import peak_prominences\n",
-    "from scipy.integrate import simps\n",
     "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.model_selection import StratifiedKFold"
    ]
@@ -661,7 +660,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Machine Learning"
+    "#### **Machine Learning with Peak Features**"
    ]
   },
   {
@@ -1748,8 +1747,8 @@
     "# Performing 10-fold cross-validation for each classifier\n",
     "for clf in classifiers:\n",
     "    \n",
-    "    # Using StratifiedKFold for classification tasks\n",
-    "    cv = StratifiedKFold(n_splits=10, shuffle=True, random_state=1234)\n",
+    "    # Using KFold for classification tasks\n",
+    "    cv = KFold(n_splits=10, shuffle=True, random_state=1234)\n",
     "    \n",
     "    # Getting cross-validation scores\n",
     "    scores = cross_val_score(clf, X, y, cv=cv, scoring='accuracy')\n",
