--- a/Baseline_Approach/plot_spectra_show_outliers.ipynb
+++ b/Baseline_Approach/plot_spectra_show_outliers.ipynb
@@ -15,7 +15,10 @@
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n"
+    "import seaborn as sns\n",
+    "import sys\n",
+    "sys.path.append('..')\n",
+    "from Cleaning_and_Evaluation import *"
    ]
   },
   {
@@ -31,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spectra_df = pd.read_csv(\"../../data/current_clean_spectrum.csv\")"
+    "spectra_df = pd.read_csv(\"../../data/exosomes.raw_spectrum_1.csv\")"
    ]
   },
   {
