--- a/Final_Results/kfold_evaluation.ipynb
+++ b/Final_Results/kfold_evaluation.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "import sys\n",
     "sys.path.append('..')  # Adds the parent directory to the path so Python can find the `Cleaning_and_Evaluation` package\n",
-    "\n",
+    "from Cleaning_and_Evaluation import *\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from sklearn.ensemble import ExtraTreesClassifier\n",
@@ -30,8 +30,7 @@
     "from sklearn.svm import SVC\n",
     "from sklearn.model_selection import StratifiedKFold, KFold, cross_validate\n",
     "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "from Cleaning_and_Evaluation import *"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
