--- a/Neural Networks/Groups_CNN_test.ipynb
+++ b/Neural Networks/Groups_CNN_test.ipynb
@@ -523,8 +523,7 @@
     "# Split data into training and testing sets ensuring no overlap in SurID\n",
     "group_kfold = GroupShuffleSplit(test_size=0.2, n_splits=1, random_state=1234)\n",
     "\n",
-    "# Assuming 'SurID' is a column in X, which is used to group the data\n",
-    "groups = X['SurID']\n",
+    "# Outline the groups for GroupKFoldgroups = X['SurID']\n",
     "for train_idx, test_idx in group_kfold.split(X, y, groups):\n",
     "    X_train_temp, X_test = X.iloc[train_idx], X.iloc[test_idx]\n",
     "    y_train_temp, y_test = y.iloc[train_idx], y.iloc[test_idx]\n",
