Standardising File Names

--- a/Archive/Graphs/classifying_graph_features.ipynb
+++ b/Archive/Graphs/classifying_graph_features.ipynb
@@ -546,8 +546,6 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "import numpy as np\n",
     "\n",
-    "# Assuming df is your DataFrame and it has been defined previously\n",
-    "\n",
     "X = df.drop(['Status'], axis=1)\n",
     "y = df['Status']\n",
     "\n",
@@ -556,7 +554,7 @@
     "# Performing 10-fold cross-validation for the classifier\n",
     "cv = StratifiedKFold(n_splits=10, shuffle=True, random_state=1234)\n",
     "\n",
-    "# Initialize lists to store scores\n",
+    "# Initialise lists to store scores\n",
     "accuracy_scores = []\n",
     "precision_scores = []\n",
     "recall_scores = []\n",
