--- a/GroupKFold_Baseline_Apporach/Leave_One_Out.ipynb
+++ b/GroupKFold_Baseline_Apporach/Leave_One_Out.ipynb
@@ -849,7 +849,7 @@
     "\n",
     "    group_accuracies = {}  # To store accuracies for each group\n",
     "    for train_index, test_index in lpgo.split(X, y, groups):\n",
-    "        group_id = groups.iloc[test_index].unique()[0]  # Assuming each test set only has one group\n",
+    "        group_id = groups.iloc[test_index].unique()[0]\n",
     "        X_train, X_test = X.iloc[train_index], X.iloc[test_index]\n",
     "        y_train, y_test = y.iloc[train_index], y.iloc[test_index]\n",
     "        \n",
