--- a/GroupKFold_Baseline_Apporach/Spike_and_Outlier_Removal.ipynb
+++ b/GroupKFold_Baseline_Apporach/Spike_and_Outlier_Removal.ipynb
@@ -1506,7 +1506,7 @@
    "source": [
     "wavelength_df = prepare_wavelength_df(svn_df, 'Absorbance')\n",
     "\n",
-    "# Prepare features, assuming 'Status' is not a feature but a label\n",
+    "# Prepare features\n",
     "X = wavelength_df.drop(['Status'], axis=1)\n",
     "\n",
     "# Find outliers within each group\n",
