More Repo Cleaning

--- a/Parameter_Searches/Peak_Parameter_Search.ipynb
+++ b/Parameter_Searches/Peak_Parameter_Search.ipynb
@@ -28,7 +28,7 @@
     "from sklearn.ensemble import ExtraTreesClassifier\n",
     "from scipy.signal import peak_widths, peak_prominences\n",
     "from sklearn.model_selection import cross_val_score\n",
-    "from sklearn.model_selection import StratifiedKFold, KFold, cross_validate\n",
+    "from sklearn.model_selection import KFold, cross_validate\n",
     "from joblib import Parallel, delayed"
    ]
   },
