--- a/Feature_Selection/Dimensionality_Reduction_Test.ipynb
+++ b/Feature_Selection/Dimensionality_Reduction_Test.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Machine Learning"
+    "#### **This Notebook Explores the Use of Dimensionality Reduction through PCA and LDA**"
    ]
   },
   {
@@ -15,8 +15,7 @@
    "source": [
     "import pandas as pd\n",
     "from sklearn.ensemble import ExtraTreesClassifier\n",
-    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix, precision_score, recall_score, f1_score\n",
-    "from sklearn.model_selection import StratifiedKFold, KFold, GroupKFold, cross_val_score\n",
+    "from sklearn.model_selection import GroupKFold, cross_val_score\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
