Refactoring Gaussian kernel Graph

--- a/Logical_Graphs/Peaks_Grids_Graph.ipynb
+++ b/Logical_Graphs/Peaks_Grids_Graph.ipynb
@@ -20,6 +20,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Importing and Preprocessig Data for Neo4j"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Import relevant libraries and import raw data"
    ]
   },
@@ -95,6 +102,29 @@
     "#df = pd.read_csv(\"../../data/current_clean_spectrum.csv\")\n",
     "#df = pd.read_csv(\"../../data/initial_parameters.csv\")\n",
     "df = pd.read_csv(\"../../data/groupkfold_parameters.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cleaning_params = {\n",
+    "    'despike': True,\n",
+    "    'baseline_correct': True,\n",
+    "    'smoothing': True,\n",
+    "    'scaling': 'vector',\n",
+    "    'despike_ma': 10,\n",
+    "    'despike_threshold': 7,\n",
+    "    'lam': 10**7,\n",
+    "    'p': 0.01,\n",
+    "    'window_size': 21,\n",
+    "    'poly_order': 3\n",
+    "}\n",
+    "spectra_cleaning(df, **cleaning_params)\n",
+    "\n",
+    "df"
    ]
   },
   {
@@ -1458,7 +1488,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Creating Graph and Running Queries in Neo4j"
+    "## Building Graph and Running Graph Algorithms"
    ]
   },
   {
@@ -2247,6 +2277,13 @@
     "fast_graph_df.rename(columns={'SpecID_x':'SpecID'}, inplace=True)\n",
     "\n",
     "graph_df['SurID'] = graph_df['SpecID'].str[:-3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Machine Learning Using Graph Metrics"
    ]
   },
   {
